<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mfathoer.sharecipe.presentation.detailrecipe.DetailRecipeViewModel" />

        <variable
            name="detailRecipeFragment"
            type="com.mfathoer.sharecipe.presentation.detailrecipe.DetailRecipeFragment" />

        <variable
            name="recipe"
            type="com.mfathoer.sharecipe.domain.model.Recipe" />


    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.detailrecipe.DetailRecipeFragment">

            <ImageView
                android:id="@+id/img_recipe"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:imageUrl="@{recipe.imageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/circular_img_button_size"
                android:layout_height="@dimen/circular_img_button_size"
                android:layout_margin="@dimen/spacing_regular"
                android:background="@drawable/bg_circular"
                android:contentDescription="@string/content_desc_back_to_previous_screen"
                android:onClick="@{()->detailRecipeFragment.backToPreviousScreen()}"
                android:padding="@dimen/spacing_small"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/btn_bookmark"
                android:layout_width="@dimen/circular_img_button_size"
                android:layout_height="@dimen/circular_img_button_size"
                android:layout_margin="@dimen/spacing_regular"
                android:background="@drawable/bg_circular"
                android:contentDescription="@string/content_desc_add_to_bookmark"
                android:onClick="@{()->viewModel.changeBookmarkStatus()}"
                android:padding="@dimen/spacing_small"
                android:src="@drawable/ic_baseline_bookmark_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_recipe_name"
                style="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_regular"
                android:text="@{recipe.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_recipe"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_title_summary"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/summary"
                app:layout_constraintEnd_toEndOf="@id/tv_recipe_name"
                app:layout_constraintStart_toStartOf="@id/tv_recipe_name"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_name" />

            <TextView
                android:id="@+id/tv_summary"
                style="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:text="@{recipe.summary}"
                app:layout_constraintEnd_toEndOf="@id/tv_recipe_name"
                app:layout_constraintStart_toStartOf="@id/tv_recipe_name"
                app:layout_constraintTop_toBottomOf="@id/tv_title_summary"
                tools:maxLines="5"
                tools:text="@tools:sample/lorem/random" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{()->detailRecipeFragment.shareRecipe(recipe.sourceUrl)}"
                android:paddingVertical="10dp"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textSize="@dimen/font_size_large_button"
                app:cornerRadius="@dimen/corner_radius_normal"
                app:layout_constraintBottom_toTopOf="@id/btn_view_detail"
                app:layout_constraintEnd_toEndOf="@id/btn_view_detail"
                app:layout_constraintStart_toStartOf="@id/btn_view_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_summary"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintVertical_chainStyle="packed"
                app:strokeColor="?colorPrimary"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_view_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_regular"
                android:onClick="@{()->detailRecipeFragment.openRecipeUrlInBrowser(recipe.sourceUrl)}"
                android:paddingVertical="10dp"
                android:text="@string/view_detail"
                android:textAllCaps="false"
                android:textSize="@dimen/font_size_large_button"
                app:cornerRadius="@dimen/corner_radius_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_title_summary"
                app:layout_constraintStart_toStartOf="@id/tv_title_summary"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintVertical_chainStyle="packed" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="btn_bookmark,img_recipe,tv_recipe_name,tv_summary,tv_title_summary,btn_share,btn_view_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>